@@ -269,6 +269,17 @@
             "description": "Standby function control",
             "defaultValue": 0,
             "access": "RW"
+        },
+        {
+            "id": "serialNumber",
+            "address": 1000,
+            "size": 18,
+            "type": "string",
+            "readSchedule": "init",
+            "registerType": "inputRegister",
+            "description": "Serial number",
+            "defaultValue": 0,
+            "access": "RO"
         }
     ]
 }
